--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </p>
             </section>
 
-            <section>
+            <section id="imagem01" class="destaque">
                 <p>
                     Não é mais como era antes
                     <br>É tudo abreviado
@@ -60,7 +60,7 @@
                 </p>
             </section>
 
-            <section>
+            <section id="imagem02" class="destaque">
                 <p>
                     <br>Tenho saudade das cartas
                     <br>Escritas com a própria mão
